--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,21 @@
+altgraph==0.10.2
+asn1crypto==0.24.0
+bdist-mpkg==0.5.0
+cffi==1.12.2
+cryptography==2.6.1
+enum34==1.1.6
+future==0.17.1
+ipaddress==1.0.22
+macholib==1.5.1
+matplotlib==1.3.1
+modulegraph==0.10.4
+py2app==0.7.3
+pycparser==2.19
+pyOpenSSL==19.0.0
+pyparsing==2.0.1
+python-dateutil==1.5
+pytz==2013.7
+six==1.12.0
+vboxapi==1.0
+xattr==0.6.4
 Flask==1.0.2
